app/assets/stylesheets/base.scss
@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);

body {
  background: #fff;
  font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
}

header.app-header {
  @extend .navbar;
  @extend .navbar-default;
  @extend .navbar-inverse;
  @extend .navbar-static-top;

  background: $header-color;
  border-color: $header-border-color;
  position: relative;

  margin-bottom: 10px;

  > div {
    @extend .container;
  }

  > div .app-title {
    @extend .navbar-header;
    margin-right: 25px;

    h1 {
      margin: 0;
      padding: 0;
    }

    a {
      display: block;
      height: 50px;
      padding-top: 11px;

      .logo, .instance-name, .dropdown-icon {
        display: inline-block;
        vertical-align: top;
      }

      h1.logo {
        font-weight: bold;
        color: $header-color;
        font-size: 24px;
        text-align: center;

        span {
          display: none;
        }

        width: 30px;
        height: 30px;
        margin: 0 10px 0 0;
        padding: 3px;
        background: #fff;
      }

      .instance-name {
        color: #fff;
        font-weight: bold;
        font-size: 18px;
        margin-top: 3px;
      }

      .dropdown-icon {
        @extend .glyphicon;
        @extend .glyphicon-menu-down;

        color: #fff;
        margin: 8px 6px;

        /* hide this by default - it will be shown by JavaScript */
        visibility: hidden;
      }
    }
  }

  nav[role='navigation'] {
    @extend .collapse;
    @extend .navbar-collapse;

    > ul {
      @extend .nav;
      @extend .navbar-nav;

      > li > a {
        color: #fff;
        font-size: 14px;
        padding: 16px 15px 14px;
      }
      > li.active > a {
        background: $header-border-color;
      }
    }
  }

  .primary-actions {
    float: right;
    margin-top: -50px;
    padding-top: 10px;

    a {
      display: inline-block;
      background: #fff;
      color: $header-color;
      padding: 6px 12px;
      border-radius: 2px;
    }
  }
}

main {
  margin-bottom: 50px;
}

h1 {
  &.page-title, &.page-title-with-border {
    margin-bottom: 30px;
  }
}

h2 {
  font-weight: bold;
  font-size: 23px;
}

.workflow {
  @extend .navbar;
  @extend .navbar-inverse;
  @extend .navbar-fixed-bottom;

  background: none;
  border-color: #dbdcdc;

  .bg {
    background: #eff0f4;
    opacity: 0.5;
    width: 100%;
    height: 51px;

    position: absolute;
    bottom: 0;
    z-index: -1;
  }
}

.breadcrumb {
  padding: 0;
  background: none;
  font-size: 13px;
}

ul {
  padding-left: 1.1em;
}

